<resources>
    <string name="app_name">StudyRecord</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_to_fragment">发送数据到fragment</string>
    <string name="send_back">回传到Activity</string>
    <string name="transfer_data">数据传输</string>
    <string name="navigation">导航栏</string>
    <string name="string_channel">频道</string>
    <string name="string_message">消息</string>
    <string name="string_setting">设置</string>
    <string name="favorite">收藏</string>
    <string name="channel">频道页面</string>
    <string name="message">消息界面</string>
    <string name="favorite_string">收藏页面</string>
    <string name="setting_prompt">设置界面</string>
    <string name="context_title">2021年大事件</string>
    <string name="mars">天问一号成功着陆火星</string>
    <string name="space">神舟十二号载人航空任务圆满完成</string>
    <string name="henan">河南暴雨造成重大灾害</string>
    <string name="guang_zhou">广州疫情卷土重来,总感染人数超过500</string>
    <string name="meng">孟晚舟女士回国</string>
    <string name="embassy">中国关闭美国驻成都大使馆</string>
    <string name="vaccine">我国新冠疫苗接种总剂量超过21亿</string>
    <string name="string_import">中国停止从澳大利亚进口葡萄酒等产品</string>
    <string name="heng_da">恒大陷入债务危机</string>
    <string name="chang_sha">长沙货拉拉事件</string>
    <string name="radio_navigation">RadioNavigation</string>
    <string name="view_page">ViewPage</string>
    <string name="pla">中国共产党建党100周年</string>
    <string name="my_messages">我的消息</string>
    <string name="fragmet_title_info">关于几个Fragment的说明</string>
    <string name="grid_layout_info">当前页面使用GridLayout</string>
    <string name="list_view_info">消息页面使用ListView构建</string>
    <string name="recycle_view_info">收藏界面使用RecycleView</string>
    <string name="file">File</string>
    <string name="write">写入</string>
    <string name="file_name">文件名</string>
    <string name="read">读取</string>
    <string name="password">密\u3000码</string>
    <string name="user_name">用户名</string>
    <string name="submit">提\u3000交</string>
    <string name="string_mysql">MySQL</string>
    <string name="string_add">增\u3000加</string>
    <string name="string_delete">删\u3000除</string>
    <string name="string_search">查\u3000询</string>
    <string name="my_sql_title">MySql演示</string>
    <string name="student_title">学生档案</string>
    <string name="string_update">修\u3000改</string>
    <string name="string_name">姓\u3000名</string>
    <string name="gender">性\u3000别</string>
    <string name="age">年\u3000龄</string>
    <string name="school">学\u3000校</string>
    <string name="string_class">班\u3000级</string>
    <string name="string_id">\u2000I\u3000\u2000D</string>
    <string name="string_age">年\u3000龄</string>
    <string name="string_school">学\u3000校</string>
    <string name="string_transaction">Transaction</string>
    <string name="position_test">位置测试</string>
    <string name="butterfly_desc">蝴蝶</string>
    <string name="margin_50dp">width=0dp padding=50 margin=50dp</string>
    <string name="string_constraint">Constraint</string>
    <string name="barrier_right">Barrier右侧的View</string>
    <string name="barrier_left_bottom">左下View</string>
    <string name="barrier_left_top">左上View</string>
    <string name="chain_4">chain_4.0</string>
    <string name="chain_3">chain_3.0</string>
    <string name="chain_2">chain_2.0</string>
    <string name="dimension_ratio">宽高比例约束</string>
    <string name="center_view">Center View</string>
    <string name="constraint_margin">居中约束外加偏移</string>
    <string name="constraint_bias">居中约束外加百分比偏移</string>
    <string name="placeholder_context">没有PlaceHolder时,位于屏幕左下角</string>
    <string name="string_transfer">转\u3000账</string>
    <string name="string_amount">余\u3000额</string>
    <string name="transfer_to_name">转入账户</string>
    <string name="transfer_from">转出账户</string>
    <string name="transfer_amount">转账金额</string>
    <string name="string_http">Http</string>
    <string name="tip_internet">请求访问互联网</string>
    <string name="string_json">Json</string>
</resources>