<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_676769"
    tools:context=".fragments.ContextFragment">
    <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/main_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:textSize="25sp"
                android:text="@string/context_title"
                android:layout_width="match_parent"
                android:textColor="@color/green_500"
                android:gravity="center_horizontal"
                android:layout_height="match_parent">
            </TextView>
        </LinearLayout>
            <TextView
                android:id="@+id/top1"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"
                android:text="@string/mars"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/top2"
                android:textColor="@color/white"
                android:text="@string/space"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:id="@+id/top3"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:text="@string/henan"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:id="@+id/top4"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:text="@string/guang_zhou"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:id="@+id/top5"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:text="@string/meng"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:id="@+id/top6"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:text="@string/embassy"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:id="@+id/top7"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:text="@string/vaccine"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:id="@+id/top8"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:text="@string/string_import"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:id="@+id/top9"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:text="@string/heng_da"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:id="@+id/top10"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:text="@string/pla"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>
</FrameLayout>