<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_676769"
    tools:context=".RadioNavigationActivity">
    <LinearLayout
        android:id="@+id/fragment_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <fragment
            android:id="@+id/main_fragment"
            android:layout_width="match_parent"
            android:name="com.example.fragmentproject.fragments.ContextFragment"
            android:layout_height="match_parent">
        </fragment>
    </LinearLayout>

    <LinearLayout
        android:background="@color/color_2b2b2b"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="50dp">

        <RadioGroup
            android:id="@+id/radio_group"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:id="@+id/channel_btn"
                android:text="@string/string_channel"
                android:drawableTop="@drawable/radio_btn_channel"
                style="@style/radio_btn_item">
            </RadioButton>

            <RadioButton
                android:id="@+id/message_btn"
                android:drawableTop="@drawable/radio_btn_message"
                style="@style/radio_btn_item"
                android:text="@string/string_message">

            </RadioButton>

            <RadioButton
                android:id="@+id/favorite_btn"
                android:drawableTop="@drawable/radio_btn_favorite"
                style="@style/radio_btn_item"
                android:text="@string/favorite">

            </RadioButton>

            <RadioButton
                android:id="@+id/setting_btn"
                android:drawableTop="@drawable/radio_btn_setting"
                style="@style/radio_btn_item"
                android:text="@string/string_setting">
            </RadioButton>
        </RadioGroup>
    </LinearLayout>
</RelativeLayout>