<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_676769"
    android:orientation="vertical"
    tools:context=".NavigationActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:id="@+id/fragment_layout"
        android:layout_height="match_parent">
        <fragment
            android:id="@+id/fragment_context"
            android:name="com.example.fragmentproject.fragments.ContextFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </fragment>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navigation_layout"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_alignParentBottom="true"
        android:background="@color/color_2b2b2b"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_channel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:padding="3dp"
            android:background="@drawable/tab_menu_bg"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@drawable/tab_menu_text"
            android:text="@string/string_channel"
            android:layout_height="match_parent"
            app:drawableTopCompat="@drawable/tab_menu_channel">
        </TextView>
        <TextView
            android:id="@+id/txt_message"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:padding="3dp"
            android:background="@drawable/tab_menu_bg"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@drawable/tab_menu_text"
            android:text="@string/string_message"
            android:layout_height="match_parent"
            app:drawableTopCompat="@drawable/tab_menu_message">
        </TextView>
        <TextView
            android:id="@+id/txt_favorite"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:padding="3dp"
            android:background="@drawable/tab_menu_bg"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@drawable/tab_menu_text"
            android:text="@string/favorite"
            android:layout_height="match_parent"
            app:drawableTopCompat="@drawable/tab_menu_favorite">
        </TextView>
        <TextView
            android:id="@+id/txt_setting"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:padding="3dp"
            android:background="@drawable/tab_menu_bg"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@drawable/tab_menu_text"
            android:text="@string/string_setting"
            android:layout_height="match_parent"
            app:drawableTopCompat="@drawable/tab_menu_setting">
        </TextView>
    </LinearLayout>


</RelativeLayout>